Project

General

Profile

Actions

Bug #20433

closed

Hash.inspect for some hash returns syntax invalid representation

Bug #20433: Hash.inspect for some hash returns syntax invalid representation

Added by tompng (tomoya ishida) over 2 years ago. Updated almost 2 years ago.

Status:
Closed
Assignee:
-
Target version:
-
[ruby-core:117564]

Description

For these hashes, Hash.inspect returns a syntax invalid representation:

{ :a! => 1 } # {:a!=>1}
{ :a? => 1 } # {:a?=>1}
{ :* => 1 }  # {:*=>1}
{ :== => 1 } # {:===>1}
{ :< => 1 }  # {:<=>1}

eval(hash.inspect) will raise SyntaxError.
Although inspect does not guarantee that the result can be eval-ed, it'd be confusing for these few cases.

Maybe related to https://bugs.ruby-lang.org/issues/20235


Related issues 2 (0 open — 2 closed)

Related to Ruby - Bug #20857: Ruby 3.4 seems to have backwards compatibility issues more than its predecessorsClosedmatz (Yukihiro Matsumoto)Actions
Related to Ruby - Bug #20962: Change in behaviour in 3.4.0rc1 of `Hash#inspect`ClosedActions
Actions

Also available in: PDF Atom