Use spaces around => in Hash#inspect for symbol keys that would generate invalid syntax

Fixes [Bug #20433]